--- a/siege.conf
+++ b/siege.conf
@@ -1,6 +1,6 @@
 
 server {
-	server_name localhost;
+	server_name localhost
     host 127.0.0.1
     port 8082
     error_page 403 error_pages/404.html
@@ -8,7 +8,12 @@ server {
     location / {
         root website/
 	    index siege.html
-        allow_methods  DELETE POST GET
-        autoindex off
+        allow_methods GET POST
+    }
+    location /cgi {
+        root ./
+        allow_methods GET POST
+        index hours.py
+        cgi .py /usr/bin/python3
     }
 }
